feat: add new account service methods